修改代理人统计